[gd_scene load_steps=12 format=3 uid="uid://bbtsp7cgs34ge"]

[ext_resource type="Script" uid="uid://dag0c3b3m4nlx" path="res://scenes/main.gd" id="1_tefeu"]
[ext_resource type="PackedScene" uid="uid://cjei1i8i4xsor" path="res://scenes/pipe.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" uid="uid://bj38ptr2vfcrb" path="res://scenes/background.tscn" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://b160id05sov32" path="res://scenes/cat.tscn" id="5_tbgi4"]
[ext_resource type="PackedScene" uid="uid://c6243776mjo7w" path="res://scenes/game_over.tscn" id="5_tefeu"]
[ext_resource type="PackedScene" uid="uid://d0dybtiulqg1x" path="res://scenes/ground.tscn" id="6_tefeu"]
[ext_resource type="AudioStream" uid="uid://04jldpjr3xld" path="res://assets/cat-meow.mp3" id="7_o6xl0"]
[ext_resource type="AudioStream" uid="uid://1fjxm3s8s0ou" path="res://assets/swoosh.mp3" id="7_tipki"]
[ext_resource type="AudioStream" uid="uid://brtx334v1bl6f" path="res://assets/point.mp3" id="9_85g3d"]
[ext_resource type="PackedScene" uid="uid://cf16pw50e2fjn" path="res://scenes/scene_transition_animation.tscn" id="10_choun"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_choun"]
size = Vector2(90, 649)

[node name="Main" type="Node"]
script = ExtResource("1_tefeu")
pipe_scene = ExtResource("2_jyhfs")

[node name="Cat" parent="." instance=ExtResource("5_tbgi4")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.3

[node name="Background" parent="." instance=ExtResource("3_sugp2")]

[node name="Game_over" parent="." instance=ExtResource("5_tefeu")]

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -68.0
offset_right = 68.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 36
text = "Score: 0"

[node name="Ground" parent="." instance=ExtResource("6_tefeu")]
position = Vector2(0, 648)

[node name="sfx_swoosh" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_tipki")
volume_db = -0.16

[node name="sfx_score" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_85g3d")
volume_db = -0.16

[node name="sfx_fall" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_o6xl0")

[node name="SceneTransitionAnimation" parent="." instance=ExtResource("10_choun")]

[node name="Portal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Portal"]
position = Vector2(1197, 324.5)
shape = SubResource("RectangleShape2D_choun")

[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="Game_over" to="." method="_on_game_over_restart"]
[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="body_entered" from="Portal" to="." method="_on_portal_body_entered"]
